--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
     --primary-color-white: #ffffff;
     --primary-color-black: #06050a;
     --primary-color-violet: #ae57bf;
+    --primary-color-pink: #e92d89;
     --secondary-color-dark-violet: #1e1b35;
     --secondary-color-red: #ef5050;
     --secondary-color-orange: #ff9d43;
